# forked

./: .gitignore  AGENTS.md  Forked CLI Expansion Implementation Plan.md  LLM.md  README.md  pyproject.toml  sanity_check.md
.github/workflows/: publish.yml
docs/: LLM.md  README.md
docs/commands/: build.md  clean.md  feature.md  guard.md  init.md  status.md  sync.md
docs/workflows/: conflict-response.md  overlay-development.md  release-hygiene.md
forked/: __init__.py  build.py  cli.py  config.py  gitutil.py  guards.py
legacy-handbook/: Makefile  README.md
legacy-handbook/docs/: CLAUDE.md  ENHANCED_ERGONOMICS.md  INSTALL_VERIFICATION.md  PARKING_LOT_SYSTEM.md  SYSTEM_GUIDE.md
legacy-handbook/features/guard-automation/: changelog.md  overview.md  status.md
legacy-handbook/features/overlay-infrastructure/: changelog.md  overview.md  status.md
legacy-handbook/features/release-operations/: status.md
legacy-handbook/parking-lot/: index.json
legacy-handbook/process/: AI_AGENT_START_HERE.md  DOCS_AUTOMATION.md
legacy-handbook/process/automation/: feature_status_updater.py  sprint_manager.py  task_manager.py
legacy-handbook/process/playbooks/: backlog-triage.md  parking-lot-review.md  release-planning.md
legacy-handbook/releases/: CHANGELOG.md  v1.0.0.md
legacy-handbook/releases/v1.0.0/: plan.md
legacy-handbook/sprints/: current
legacy-handbook/status/: current.json
project-handbook/adr/: 0001-overlay-worktree-contract.md  0002-guard-cli-contract.md  0003-feature-slice-workflows.md  0004-conflict-bundle-automation.md  0005-operational-tooling.md  README.md
project-handbook/backlog/: index.json
project-handbook/docs/: BACKLOG_SYSTEM.md  CAPACITY_MANAGEMENT.md  CONFIGURATION.md  CONVENTIONS.md  DEMO_REPO.md  INCIDENT_RESPONSE.md  MAKEFILE_COMMANDS.md  SPRINT_SYSTEM.md  SYSTEM_COMPREHENSIVE_REVIEW.md  workflow-diagram.md
project-handbook/features/clean-command/: changelog.md  overview.md  risks.md  status.md
project-handbook/features/conflict-bundle-automation/: risks.md  (+3 more)
project-handbook/process/: AI_AGENT_START_HERE.md
project-handbook/releases/: CHANGELOG.md  v1.0.0.md
project-handbook/roadmap/: now-next-later.md
project-handbook/sprints/: current
project-handbook/status/: current.json
scripts/: setup-demo-repo.sh
testing/: README.md
tests/: conftest.py  test_build_provenance.py  test_clean_command.py  test_cli_feature.py  test_config_features.py  test_conflict_bundle_v2.py  test_guard_overrides.py  test_guard_report_v2.py  test_skip_upstream_equivalents.py  test_status_json.py  test_sync_conflict_autocontinue.py
(+149 files in other folders)
