[project]
name = "forked-cli"
version = "0.1.0"
description = "Git-native fork overlay & guard tool"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.7",
    "pathspec>=0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
forked = "forked.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "project-handbook",
    "scripts",
    "demo-*",
    "forked_cli.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
files = ["forked/cli.py"]
strict = false
ignore_missing_imports = true
follow_imports = "skip"
