[project]
name = "forked-cli"
version = "0.1.0"
description = "Git-native fork overlay & guard tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Spenquatch", email = "spmcconnell.totaltele@gmail.com" }]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.7",
    "pathspec>=0.12",
]

[project.scripts]
forked = "cli:app"

[tool.poetry]
packages = [{ include = "*", from = "src" }]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.5"
mypy = ">=1.10"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "project-handbook",
    "scripts",
    "demo-*",
    "forked_cli.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
files = ["src"]
strict = false
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
